# server/database/repository.js
@@ -2,6 +2,19 @@ const schema = require('./schema');
 const Workout = schema.workout;
 const Program = schema.program;
 
+const saveProgram = (program) => {
+    const p = new Program(program);
+    return p.save();
+}
+
+const findProgram = (id) => {
+    return Program.findOne({ _id: id }).lean();
+}
+
+const listPrograms = (filter = {}) => {
+    return Program.find(filter).lean();
+}
+
 const saveWorkout = (workout) => {
     const w = new Workout(workout)
     return w.save();
@@ -12,27 +25,19 @@ const findWorkout = (id) => {
 }
 
 const listWorkouts = (filter = {}) => {
-    return Workout.find(filter).lean();
+    return Program.find().find(filter).lean();
 }
 
 const updateWorkout = (id, operations) => {
     return Workout.updateOne({ _id: id }, { $set: operations });
 }
 
-const saveProgram = (program) => {
-    const p = new Program(program);
-    return p.save();
-}
-
-const listPrograms = (filter = {}) => {
-    return Program.find(filter).lean();
-}
-
 module.exports = {
+    saveProgram: saveProgram,
+    findProgram: findProgram,
+    listPrograms: listPrograms,
     saveWorkout: saveWorkout,
     findWorkout: findWorkout,
     listWorkouts: listWorkouts,
     updateWorkout: updateWorkout,
-    saveProgram: saveProgram,
-    listPrograms: listPrograms,
 };
