# server/swagger-output.json
@@ -147,6 +147,30 @@
           }
         }
       }
+    },
+    "/program/{id}": {
+      "get": {
+        "tags": [
+          "Program"
+        ],
+        "description": "Get a program",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
     }
   },
   "definitions": {
